<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corners_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/blue_edward"
                    android:text="@string/gradient"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_gradient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="min 50  max 200"
                        android:textSize="15sp"
                        android:inputType="numberDecimal"
                        android:background="@android:color/transparent"
                        android:padding="5dp"/>


                    <TextView
                        android:background="@android:color/transparent"
                        android:id="@+id/et_gradient_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:hint="@string/gradient_unit"
                        android:textSize="15sp"
                        android:padding="5dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:minWidth="1dp"
                        android:background="@color/progress_gray"
                        android:layout_below="@+id/et_gradient"/>

                </RelativeLayout>

                <TextView
                    android:paddingLeft="5dp"
                    android:textColor="@color/blue_edward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valve_area"
                    android:paddingTop="20dp"
                    android:textSize="20sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:padding="5dp"
                        android:id="@+id/et_valve_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="from -2.5  max 2.6"
                        android:background="@android:color/transparent"
                        android:inputType="numberDecimal"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/et_valve_area_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/valve_area_unit"
                        android:textSize="15sp"
                        android:padding="5dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:minWidth="1dp"
                        android:background="@color/progress_gray"
                        android:layout_below="@+id/et_valve_area"/>

                </RelativeLayout>

                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/blue_edward"
                    android:text="@string/jet_velocity"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColor="@color/blue_edward"
                        android:padding="5dp"
                        android:id="@+id/et_jet_velocity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="min 2.0  max 11.2"
                        android:inputType="numberDecimal"
                        android:background="@android:color/transparent"
                        android:textSize="15sp"/>
                    <TextView
                        android:padding="5dp"
                        android:id="@+id/et_jet_velocity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/jet_velocity_unit"
                        android:textSize="15sp"

                       />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:minWidth="1dp"
                        android:background="@color/progress_gray"
                        android:layout_below="@+id/et_jet_velocity"/>

                </RelativeLayout>


            </LinearLayout>


        </RelativeLayout>



</LinearLayout>